# transent

./: Cargo.toml  LICENSE  README.md  config.toml  key_config.toml  make.sh  theme.toml
.github/workflows/: ci.yml
client-core/: Cargo.toml
client-core/src/: lib.rs
client-qbittorrent/: Cargo.toml
client-qbittorrent/src/: lib.rs
client-transmission/: Cargo.toml
client-transmission/src/: lib.rs
src/: app.rs  config.rs  key_config.rs  main.rs  theme.rs  util.rs
src/components/: actions_widget.rs  delete_confirmation.rs  details.rs  file_picker.rs  files.rs  input.rs  mod.rs  peers_table.rs  tabs.rs  torrent_table.rs  util.rs
src/widgets/: custome_tab.rs  delete_popup.rs  file_picker.rs  files_table.rs  input.rs  magnet.rs  mod.rs  peers_table.rs  torrent_actions.rs  torrent_adder.rs  torrent_details.rs  torrent_table.rs
themes/: catppuccin_mocha.toml  dracula.toml  github.toml  github_dark.toml  gruvbox_dark.toml  nord.toml  rose_pine.toml  tokyonight.toml
tui/: Cargo.toml
tui/src/: app.rs  config.rs
tui/src/widgets/: delete_popup.rs  file_picker.rs  input.rs  magnet.rs  mod.rs  peers_table.rs  torrent_adder.rs  torrent_details.rs  torrent_table.rs
