[package]
name = "client-qbittorrent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
client-core = { path = "../client-core" }

async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
reqwest.workspace = true
url.workspace = true
