[package]
name = "client-transmission"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
client-core = { path = "../client-core" }

async-trait.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true

transmission-rpc.workspace = true
url.workspace = true
