[package]
name = "transent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true

ratatui.workspace = true
crossterm.workspace = true
color-eyre.workspace = true
url.workspace = true
toml.workspace = true

derive_setters.workspace = true
home.workspace = true
dirs.workspace = true
lava_torrent.workspace = true
transmission-rpc.workspace = true

client-core = { path = "../client-core" }
client-transmission = { path = "../client-transmission" }
client-qbittorrent = { path = "../client-qbittorrent" }

[target.'cfg(target_os = "linux")'.dependencies]
arboard.workspace = true
